--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
     "scripts": {
     "start": "node server.js",
-    "postinstall": "bower install && npm install"
+    "postinstall": "npm install"
   },
   "author": "Francis",
   "license": "ISC",
