--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
     "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "author": "Francis",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "bower": "latest",
     "cookie-parser": "^1.4.0",
     "csurf": "^1.8.3",
     "express": "^4.13.3",
