--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "description": "This is a tweet search app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-    "scripts": {
     "start": "node server.js",
     "postinstall": "./node_modules/bower/bin/bower install"
   },
@@ -17,6 +14,7 @@
     "bower": "latest",
     "cookie-parser": "^1.4.0",
     "csurf": "^1.8.3",
+    "ddos": "^0.1.7",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
     "mongo-sanitize": "^1.0.0",
